<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="thoughtnote.com.ui.entry.login.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_white">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="@dimen/_22sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_back"
            android:layout_height="@dimen/_14sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/back_button"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/welcome_back"
                    android:textSize="@dimen/_22sdp"
                    android:textColor="@color/clr_black"
                    app:textfont="@{`PoppinsMedium.ttf`}"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/register_here"
                    android:textSize="@dimen/_14sdp"
                    android:onClick="@{viewModel::onRegister}"
                    android:textColor="@color/txt_clr_blue"
                    app:textfont="@{`PoppinsSemiBold.ttf`}"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/username"
                        android:textSize="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_80sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:textColor="@color/text_clr_black"
                        app:textfont="@{`PoppinsMedium.ttf`}"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:text=""
                        android:hint="@string/hint_name"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/text_clr_black"
                        app:textfont="@{`Poppins.ttf`}"
                        android:backgroundTint="@color/clr_gray_light"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/password"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:textColor="@color/text_clr_black"
                        app:textfont="@{`PoppinsMedium.ttf`}"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:text=""
                        android:hint="@string/hint_password"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/text_clr_black"
                        app:textfont="@{`Poppins.ttf`}"
                        android:backgroundTint="@color/clr_gray_light"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/forgot_password"
                        android:textSize="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_gravity="right"
                        android:onClick="@{viewModel::onForgotPass}"
                        app:textfont="@{`Poppins.ttf`}"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textColor="@color/clr_white"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/login"
                        android:clickable="true"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/curved_button_bg_blue"
                        android:textSize="@dimen/_14sdp"
                        android:layout_height="wrap_content"
                        app:textfont="@{`PoppinsMedium.ttf`}"/>
                </LinearLayout>
            </LinearLayout>

    </RelativeLayout>


    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="thoughtnote.com.ui.entry.login.LoginViewModel" />

    </data>


</layout>